--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <section>
         <h2>
-            ALGORITMO DE BUSCA SEQUENCIAL
+            BUSCA SEQUENCIAL
         </h2>
         <img src="imagem/buscaSequencial.png" alt="Busca sequencial pequena">
         <p>
