--- a/index.html
+++ b/index.html
@@ -68,6 +68,11 @@
     <section>
 
     </section>
+    <footer>
+        <p>           
+            Site Criado por &copy; <a href="https://github.com/DenisSantos35/TrabalhoEstruturadeDados" target="_blank" rel="external">Denis Diogo dos Santos</a>
+        </p>
+    </footer>
 
 </body>
 </html>
