alteracao composicao de imagem

--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
         <p>
             Essa ultima situação indica que o vlaor de busca não existe no conjunto.
         </p>
+        <img src="imagem/binariSequencial.png" alt="">
     </section>
     <section id="imagem02" class="imagem">
 
