--- a/index.html
+++ b/index.html
@@ -32,12 +32,24 @@
         <p>
             Caso o valor de busca não exista no vetor, retorna o valor convencional -1.
         </p>
+        <h2>
+            SEQUENCIAL COM OBJETO
+        </h2>
+        <P>
+            Algoritimo de busca sequencila em um vetor de objetos.
+        </P>
+        <p>
+            Quando um algoritimo de busca precisa atuar sobre um vetor de objetos, a comparacão não deve ser feita dentro da função que implementa o algoritmo. Em vez disso, recembemos uma outra função (externa) como parametro que resolverá a comparação.
+        </p>
+        <p>
+            Essa função externa será chamada passando o objeto atual do vetor e esperará um retorno true caso a função externa determine que o objeto atual contém o valor de busca, ou false, caso contrário.
+        </p>
     </section>
     <section id="imagem01" class="imagem">
 
     </section>
     <section>
-        <h2>BUSCA BINARIA</h2>
+        <h2>BUSCA BINÁRIA</h2>
         <img src="imagem/buscaBinaria-full.png" alt="Busca binaria pequena">
         <p>
            Requer um conjunto de dados <strong>ORDENADOS</strong>.
@@ -48,6 +60,21 @@
         <p>
             Essa ultima situação indica que o vlaor de busca não existe no conjunto.
         </p>
+        <h2>BINÁRIA COM OBJETO</h2>
+            <P>
+                Algoritmo de busca binária em vetor de objetos.
+            </P>
+            <p>
+                Para usar a busca binária em um <strong>VETOR DE OBJETOS</strong>, precisamos transferi a comparação para uma função externa que retorne um dos três valores:  
+            </p>
+            <br>
+            <p>
+                <ul>
+                    <li>0: Caso ambos os valores sejam iguais</li>
+                    <li>1: Caso o valor de busca seja maior que o valor do meio do vetor</li>
+                    <li>-1: Caso o valor de busca seja menor que o valor do meio do vetor</li>
+                </ul>
+            </p>
         <img src="imagem/binariSequencial.png" alt="">
     </section>
     <section id="imagem02" class="imagem">
