--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
     <title>Estrutura de Dados</title>
 
 </head>
-<body>
+<body>    
     <nav>
         <ul>
             <a href="#">Home</a>
             <a href="#">Curiosidades</a>
         </ul>
     </nav>
-
     <header>
+        
         <h1>Estrutura de dados</h1>
         <p>Professor: <a href="https://github.com/XandyGomes" target="_blank" rel="external">Alexandre Gomes</a>.</p>
     </header>
@@ -69,7 +69,7 @@
             </p>
             <br>
             <p>
-                <ul>
+                <ul id="lista">
                     <li>0: Caso ambos os valores sejam iguais</li>
                     <li>1: Caso o valor de busca seja maior que o valor do meio do vetor</li>
                     <li>-1: Caso o valor de busca seja menor que o valor do meio do vetor</li>
