criacao segunda pagina

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <body>    
     <nav>
         <ul>
-            <a href="#">Home</a>
-            <a href="#">Curiosidades</a>
+            <a href="/index.html" rel="internal">Home</a>
+            <a href="/paginasSecundarias/index2.html" target="_self" rel="next">Lógica</a>
         </ul>
     </nav>
     <header>
