adicionando interacao da página web

--- a/paginasSecundarias/index2.html
+++ b/paginasSecundarias/index2.html
@@ -20,39 +20,39 @@
         <p>Professor: <a href="https://github.com/XandyGomes" target="_blank" rel="external">Alexandre Gomes</a>.</p>
     </header>
     <section>
-        <h2>
+        <h2 data-anime="left">
             LÓGICA BUSCA SEQUENCIAL
         </h2>
         
-        <p>
+        <p data-anime="left">
             ALGORITMO DE BUSCA SEQUENCIAL
         </p>
-        <p>
+        <p data-anime="left">
             Percorre o vetor, verificando se cada um dos elementos corresponde
             ao valor de busca. Ao encontrar uma correspondência, retorna a posição
             onde o valor de busca está no vetor.
         </p>
-        <p>
+        <p data-anime="left">
             Caso o valor de busca não exista no vetor, retorna o valor convencional
             -1.
         </p>        
-            <img src="/imagem/codigoSequencial-700.png" alt="imagem codigoSequencial-700">
+            <img src="/imagem/codigoSequencial-700.png" alt="imagem codigoSequencial-700" data-anime="bottom">
     </section>
-    <section>
-        <h2>
+    <section data-anime="left">
+        <h2 data-anime="left">
             LÓGICA SEQUENCIAL COM OBJETO
         </h2>
     </section>
-    <section>
-        <h2>BUSCA BINÁRIA</h2>
+    <section data-anime="left">
+        <h2 data-anime="left">BUSCA BINÁRIA</h2>
     </section>
-    <section>
+    <section data-anime="left">
         <h2>BINÁRIA COM OBJETO</h2>
+    </section >
+    <section data-anime="left">
+        <h2 data-anime="left">ORDENAÇÃ BUBBLE SORT</h2>
     </section>
-    <section>
-        <h2>ORDENAÇÃ BUBBLE SORT</h2>
-    </section>
-    <section>
+    <section data-anime="left">
 
     </section>
     
@@ -61,5 +61,6 @@
             Site Criado por &copy; <a href="https://github.com/DenisSantos35/TrabalhoEstruturadeDados" target="_blank" rel="external">Denis Diogo dos Santos</a>
         </p>
     </footer>
+    <script src="../js/index.js"></script>
 </body>
 </html>
