--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <nav>
         <ul>
             <a href="/index.html" rel="internal">Home</a>
-            <a href="/paginasSecundarias/index2.html" target="_self" rel="next">Lógica</a>
+            <a href="index2.html" target="_self" rel="next">Lógica</a>
         </ul>
     </nav>
     <header>
