--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <body>    
     <nav>
         <ul>
-            <a href="/index.html" rel="internal">Home</a>
-            <a href="./paginas/index.html" target="_self" rel="next">Lógica</a>
+            <a href="https://denissantos35.github.io/TrabalhoEstruturadeDados/" rel="internal">Home</a>
+            <a href="https://denissantos35.github.io/TrabalhoEstruturadeDados/paginas/index.html" target="_self" rel="next">Lógica</a>
         </ul>
     </nav>
     <header>
