alterações na página principal

--- a/index.html
+++ b/index.html
@@ -89,11 +89,43 @@
 
     </section>
     <section>
+        <h2>ORDENACAO SELECTION SORT</h2>
+        <img src="./imagem/slectionSprt-full.png" alt="imagem selection sort full">
         <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum non quas laboriosam porro explicabo architecto eveniet sunt fugiat perspiciatis inventore. Beatae odio aspernatur voluptatem cum, recusandae earum eveniet dolorem commodi?
+            O algoritmo de ordenação selection - sort trata-se de uma otimização do bubble sort, diminuindo drasticamente o número de trocas necessárias para fazer a ordenação.
+        </p>
+        <p>
+            Isola um dos valores do vetor e procura pelo menor valor entre os restantes, promovendo a troca vaso o primeiro valor seja maio que o segundo.
         </p>
     </section>
+    <section id="imagem04" class="imagem">
+    </section>
     <section>
+        <h2>ORDENACAO MERGE-SORT</h2>
+        <img src="./imagem/mergeSorte-full.png" alt="merge sort full">
+        <p>
+            O merge sort, ou ordenação por mistura, é um exemplo de algoritimo de ordenação por comparação do tipo <strong>dividir para cons=quistar</strong>.
+        </p>
+        <p>
+            Sua idéia básica consiste em dividir <strong>(o problema em vários subproblemas e resolver esses subproblemas através de recursividade)</strong> e conquistar <strong>(após todos os subproblemas terem sido resolvidos ocorre a conquista que é a união das resoluções dos subproblemas).</strong>
+        </p>
+        <p>
+            Como o algoritio Merge Sort usa a recursividade, há um alto consumo de memória e tempo de execução, tornando esta técninca não muito efiiente em alguns problemas.
+        </p>
+    </section>
+    <section id="imagem05" class="imagem">
+    </section>
+    <section>
+        <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Beatae nemo consequuntur aliquid est distinctio culpa natus perferendis ex reprehenderit incidunt! Obcaecati repellat eveniet similique beatae, dignissimos necessitatibus dolore dolorum corrupti.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque ipsam perspiciatis laudantium, distinctio beatae doloribus cumque veniam tempore expedita nisi, libero consequuntur doloremque maxime magnam rem omnis veritatis esse reiciendis.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur quo accusamus nesciunt ipsa sequi unde, facilis porro adipisci expedita et libero natus fugiat cumque minus, exercitationem tempora ab delectus provident!
+        </p>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio dicta incidunt et ipsum quidem quod minima omnis dignissimos iure! Voluptas facere eius consectetur quam a est inventore cupiditate harum repudiandae!
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta nobis dolor, vero error cumque eveniet? Soluta distinctio quis quasi aliquid iusto ex velit delectus, explicabo doloribus consectetur quas et accusamus.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia quibusdam tenetur incidunt totam eveniet similique blanditiis voluptas nulla earum eligendi est quia, iste natus magnam excepturi impedit, veniam iusto voluptate.
+        </p>
 
     </section>
     <footer>
