--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <nav>
         <ul>
             <a href="https://denissantos35.github.io/TrabalhoEstruturadeDados/" rel="internal">Home</a>
-            <a href="https://denissantos35.github.io/Page2TrabalhoAlexandre/" target="_self" rel="next">Lógica</a>
+            <a href="https://denissantos35.github.io/Page2TrabalhoAlexandre/" target="_self" rel="internal">Lógica</a>
         </ul>
     </nav>
     <header>
